<resources>
    <string name="app_name">Welcome To GlidaLeeApp</string>
    <string name="app_logo">GlidaLeeApp</string>
    <string name="app_name_on_screen">Welcome To GlidaLee</string>


    <string name="glidaLeeCustomerReg"><u>רישום משתמש חדש לגלידלי</u></string>
    <string name="glidaLeeBusinessReg"><u>רישום בעל עסק חדש</u></string>
    <string name="registerUser">צור משתמש</string>

    <string name="userName"><u>Full Name</u></string>
    <string name="phoneNumber"><u>Phone Number</u></string>

    <string name="ShoppingAreaText">ברוכים הבאים לעמוד הקניות!</string>
    <string name="BusinessAreaText">ברוכים הבאים לעמוד המכירה של העסק!</string>

    <string name="customer">לקוח</string>
    <string name="business_owner">בעל עסק</string>
    <string name="login">התחבר</string>
    <string name="registerUserTxt">Users Registration Here</string>
    <string name="registerBusinessTxt">Business Registration Here</string>

    <string name="ResetPasswordButton">Reset Password</string>
    <string name="SignOut">Sign Out</string>
    <string name="email_address"><u>Email Address</u></string>
    <string name="password"><u>Password</u></string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="businessName"><u>Business Name</u></string>
    <string name="businessOwnerName"><u>Business Owner Full Name</u></string>
    <string name="businessPhone"><u>Business Phone Number</u></string>
    <string name="registerThisBusiness">רישום העסק</string>
    <string name="title_activity_main_cust_land_page">MainActivityCustLandPage</string>
    <string name="tab_text_OrderHistory">Order History</string>
    <string name="tab_text_OrderNow">Order Now</string>
    <string name="tab_text_profile">Profile</string>
    <string name="title_activity_main_cus_land_page">MainActivityCusLandPage</string>
    <string name="yourProfile">Your Profile</string>
    <string name="orderNow">Order Now</string>
    <string name="orderHistory">Order History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doneDeals">עסקאות שבוצעו</string>
    <string name="createMenu">יצירת תפריט</string>
    <string name="fiveGram">גרם 500</string>
    <string name="sevenGram">גרם 750</string>
    <string name="kg">קילו</string>
    <string name="addMenu">הוספת תפריט</string>
    <string name="addDish">הוספת מנה</string>
    <string name='watchMenus'>צפייה בתפריט</string>
    <string name="dishName">שם המנה</string>
    <string name="dishPrice">מחיר</string>
    <string name="dishDescription">תיאור המנה</string>
    <string name="saveBtn">שמור</string>
    <string name="quantity">כמות</string>
    <string name="addToCart">הוסף לעגלת הקניות</string>
    <string name="shoppingCart">עגלת קניות</string>
    <string name="orderNowTxt">הזמן</string>
    <string name="payFromCart">סיכום ההזמנה בעגלה</string>
    <string name="dishPriceView">29.9 ש"ח</string>
    <string name="previousPageActivity">לעמוד הקודם</string>
    <string name="backToMainBanner">לחזרה לתפריט הראשי הקש על הבאנר</string>
    <string name="backToLogin">בחזרה להתחברות הקש על הבאנר</string>
    <string name="remove">הסר</string>
    <string name="deleteCart">מחק את עגלת הקניות</string>
    <string name="ben_and_jerry_s">Ben And Jerry\'s</string>
    <string name="golda">Golda</string>
    <string name="UploadButton">העלאת תמונה</string>
    <string name="AddDishText">הוספת מנה:</string>

    <string-array name="golda_ice_cream_tastes">
        <item>לואקר</item>
        <item>שמנת</item>
        <item>קוקימן</item>
        <item>שוקולד שקדים וקרמל</item>
        <item>טרופיקל</item>
        <item>ללא סוכר</item>
        <item>סורבה</item>
        <item>מסקרפונה ריקוטה</item>
        <item>מוס אוריאו טבעוני</item>
        <item>טבעוני</item>
    </string-array>

    <string-array name="golda_ice_cream_description">
        <item>לואקר גלידת שמנת עם וופלים וקרם אגוזים</item>
        <item>גלידת שמנת איכותית מכילה 7.8 אחוזי שומן</item>
        <item>קוקימן גלידת שמנת עם שוקולד וחתיכות של מרנג</item>
        <item>גלידת שמנת שוקולד קרמל וחתיכות שקדים</item>
        <item>טרופיקל גלידת סורבה על בסיס פירות</item>
        <item>גלידה ללא סוכר מכילה תחליף סוכר</item>
        <item>גלידת סורבה על בסיס פירות מכילה 0 אחוזי שומן</item>
        <item>גלידת שמנת וריקוטה מסקרפונה תותים</item>
        <item>מוס אוריאו טבעוני</item>
        <item>גלידות טבעוניות על בסיס חלב קוקוס סויה חמאת קקאו טחינה ועוד..</item>
    </string-array>

    <string-array name="ben_jerry_ice_cream_tastes">
        <item>קינמון באנס</item>
        <item>בראוניז שוקולד</item>
        <item>בראוניז קרמל</item>
        <item>בום צוקולטה</item>
        <item>חמאת בוטנים ועוגיות טבעוני</item>
        <item>קרמל סוטרה</item>
        <item>פיש פוד</item>
        <item>בצק עוגיות ושוקלד ציפס</item>
        <item>Wake and no bake</item>
        <item>סורבה תות</item>
    </string-array>


    <string-array name="ben_jerry_ice_cream_description">
        <item>גלידת קרמל עם בצק קינמון ופירורי עוגיות קינמון</item>
        <item>גלידת שוקולד עם חתיכות בראוניז</item>
        <item>גלידת קרמל עם חתיכות בראוניז</item>
        <item>גלידת קרמל וגלידת מוקה עם עוגיות חתיכות פאדג וליבת עוגיות שוקולד</item>
        <item>חמאת בוטנים ועוגיות טבעוני</item>
        <item>גלידת קרמל וגלידת שוקולד עם חתיכות פאדג וליבת קרמל</item>
        <item>גלידת שמנת משובחת בטעם שוקולד חלב עם מרשמלו קרמל וחתיכות פאדג בצורת דג</item>
        <item>גלידת עוגיות חלב עם חתיכות פאדג וליבת בצק עוגיות</item>
        <item>גלידת וניל עם עוגיות חמאת בוטנים וגלידת חמאת בוטנים עם חתיכות פאדג וליבת בצק עוגיות לא אפוי</item>
        <item>סורבה תות</item>
    </string-array>
    <string name="title_activity_list_business">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="click_to_edit">Click To Edit :</string>
    <string name="business_name">Business Name: name</string>
    <string name="business_owner_name">Business Owner Name: name</string>
    <string name="email_name">Email: name</string>
    <string name="city_name">City: name</string>
    <string name="personal_settings">personal settings</string>
    <string name="logout">Logout</string>
    <string name="return_button">Return</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="edit_location">Edit Location:</string>
    <string name="button">Button</string>
    <string name="settings">Settings</string>
    <string name="new_busniess_name">new Busniess Name</string>
    <string name="edit_busniess_name">Edit Busniess Name</string>
    <string name="edit_password">Edit Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="business_home_page">Business Home Page</string>


</resources>