<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalSettingsActivity">

    <TextView
        android:id="@+id/TextViewPSOwnerName"
        android:layout_width="356dp"
        android:layout_height="67dp"
        android:layout_marginTop="56dp"
        android:text="@string/business_owner_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewPSBusinessEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PS_highlight"
        app:layout_constraintVertical_bias="0.422" />

    <TextView
        android:id="@+id/PS_highlight"
        android:layout_width="389dp"
        android:layout_height="0dp"
        android:layout_marginBottom="557dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReturnPS"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/Logout"
        android:layout_width="213dp"
        android:layout_height="63dp"
        android:fontFamily="serif"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/btnTxtColor"
        android:textSize="32sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />

    <TextView
        android:id="@+id/TextViewPSBusinessEmail"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:text="@string/email_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewPSBusinessEmailPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/TextViewPSBusinessEmailPassword"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewPSBusinessLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/TextViewPSBusinessLocation"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:text="@string/city_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <TextView
        android:id="@+id/TextViewPSBusinessName"
        android:layout_width="356dp"
        android:layout_height="67dp"
        android:layout_marginTop="56dp"
        android:text="@string/business_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/TextViewPSBusinessEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PS_highlight"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonReturnPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="26dp"
        android:text="@string/return_button"
        app:backgroundTint="#2196F3"
        android:textColor="@color/btnTxtColor"
        app:layout_constraintBottom_toTopOf="@+id/PS_highlight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>