<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonPopUPasswordChange"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginBottom="259dp"
        android:text="@string/change"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPopUpPasswordCurr"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/EditTextPopUpPasswordCurr"
        android:layout_width="299dp"
        android:layout_height="59dp"
        android:layout_marginBottom="125dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="text|numberPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPopUPasswordChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPopUpPassword"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/EditTextPopUpPasswordNew"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="numberPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EditTextPopUpPasswordCurr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPopUPasswordChange"
        app:layout_constraintVertical_bias="0.562"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewPopUpPassword"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="157dp"
        android:text="@string/edit_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/EditTextPopUpPasswordCurr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
